@@ -145,6 +145,7 @@ extern PyTypeObject CounterType;
 extern PyTypeObject SelectType;
 extern PyTypeObject ChangeType;
 extern PyTypeObject ThreshType;
+extern PyTypeObject PercentType;
 
 extern PyTypeObject ScoreType;
 
