@@ -1,1 +1,1 @@
-PyoObject|PyoTableObject|pa_count_devices|pa_get_default_input|pa_get_default_output|pa_list_devices|pm_count_devices|pm_list_devices|sndinfo|midiToHz|BandSplit|Biquad|Clip|Compress|Counter|DCBlock|Delay|Disto|Dummy|Fader|Follower|Freeverb|Granulator|Hilbert|Input|InputFader|Metro|Midictl|Mix|Noise|Notein|Osc|OscReceive|OscSend|Pan|Pattern|Phasor|Pointer|Port|SPan|TrigEnv|TrigRand|TrigChoice|TrigFunc|Select|SfMarkerShuffler|SfPlayer|Sig|Sine|TableRec|Tone|Waveguide|LinTable|NewTable|SndTable|HannTable|HarmTable|Server|Stream|TableStream|SigTo|Map|SLMap|SLMapFreq|SLMapMul|SLMapPhase|SLMapQ|SLMapDur|SLMapPan|Clean_objects|Pulsar|TableRead|Thresh|SawTable|SquareTable|ZCross|Degrade|Lookup|ChebyTable|Adsr|Convolve|TableMorph|sampsToSec|secToSamps|Randi|Randh|Choice|RandInt|FM|Cloud|example|class_args|Linseg|WGVerb|Trig|CosTable|CurveTable|Score|SineLoop|OscLoop|Print|Sin|Cos|Tan|Abs|Sqrt|Log|Log2|Log10|Pow|Xnoise|XnoiseMidi|TrigXnoise|TrigXnoiseMidi|Snap|Change|PyoMatrixObject|NewMatrix|MatrixRec|MatrixPointer|TrigLinseg|Interp|SampHold|EQ|CallAfter|VarPort|Switch|Selector|Compare|ExpTable|Allpass|Allpass2|Phaser|Harmonizer|Record|Biquadx|Chorus|SfMarkerLooper|Beat|Looper
+PyoObject|PyoTableObject|pa_count_devices|pa_get_default_input|pa_get_default_output|pa_list_devices|pm_count_devices|pm_list_devices|sndinfo|midiToHz|BandSplit|Biquad|Clip|Compress|Counter|DCBlock|Delay|Disto|Dummy|Fader|Follower|Freeverb|Granulator|Hilbert|Input|InputFader|Metro|Midictl|Mix|Noise|Notein|Osc|OscReceive|OscSend|Pan|Pattern|Phasor|Pointer|Port|SPan|TrigEnv|TrigRand|TrigChoice|TrigFunc|Select|SfMarkerShuffler|SfPlayer|Sig|Sine|TableRec|Tone|Waveguide|LinTable|NewTable|SndTable|HannTable|HarmTable|Server|Stream|TableStream|SigTo|Map|SLMap|SLMapFreq|SLMapMul|SLMapPhase|SLMapQ|SLMapDur|SLMapPan|Clean_objects|Pulsar|TableRead|Thresh|SawTable|SquareTable|ZCross|Degrade|Lookup|ChebyTable|Adsr|Convolve|TableMorph|sampsToSec|secToSamps|Randi|Randh|Choice|RandInt|FM|Cloud|example|class_args|Linseg|WGVerb|Trig|CosTable|CurveTable|Score|SineLoop|OscLoop|Print|Sin|Cos|Tan|Abs|Sqrt|Log|Log2|Log10|Pow|Xnoise|XnoiseMidi|TrigXnoise|TrigXnoiseMidi|Snap|Change|PyoMatrixObject|NewMatrix|MatrixRec|MatrixPointer|TrigLinseg|Interp|SampHold|EQ|CallAfter|VarPort|Switch|Selector|Compare|ExpTable|Allpass|Allpass2|Phaser|Harmonizer|Record|Biquadx|Chorus|SfMarkerLooper|Beat|Looper|Percent
