@@ -5146,3 +5146,244 @@ Thresh_members,                                 /* tp_members */
 0,                                              /* tp_alloc */
 Thresh_new,                                     /* tp_new */
 };
+
+/***************************************************/
+/******* Percent ***********/
+/***************************************************/
+typedef struct {
+    pyo_audio_HEAD
+    PyObject *input;
+    Stream *input_stream;
+    PyObject *percent;
+    Stream *percent_stream;
+    int modebuffer[1];
+} Percent;
+
+static void
+Percent_generates_i(Percent *self) {
+    int i;
+    MYFLT guess;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    MYFLT perc = PyFloat_AS_DOUBLE(self->percent);
+    for (i=0; i<self->bufsize; i++) {
+        self->data[i] = 0.0;
+        if (in[i] == 1.0) {
+            guess = (rand()/((MYFLT)(RAND_MAX)+1)) * 100.0;
+            if (guess <= perc)
+                self->data[i] = 1.0;
+        }    
+    }
+}
+
+static void
+Percent_generates_a(Percent *self) {
+    int i;
+    MYFLT guess;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    MYFLT *perc = Stream_getData((Stream *)self->percent_stream);
+    
+    for (i=0; i<self->bufsize; i++) {
+        self->data[i] = 0.0;
+        if (in[i] == 1.0) {
+            guess = (rand()/((MYFLT)(RAND_MAX)+1)) * 100.0;
+            if (guess <= perc[i])
+                self->data[i] = 1.0;
+        }    
+    }
+}
+
+static void
+Percent_setProcMode(Percent *self)
+{    
+    int procmode = self->modebuffer[0];
+    switch (procmode) {
+        case 0:        
+            self->proc_func_ptr = Percent_generates_i;
+            break;
+        case 1:    
+            self->proc_func_ptr = Percent_generates_a;
+            break;
+    }
+}
+
+static void
+Percent_compute_next_data_frame(Percent *self)
+{
+    (*self->proc_func_ptr)(self); 
+    Stream_setData(self->stream, self->data);
+}
+
+static int
+Percent_traverse(Percent *self, visitproc visit, void *arg)
+{
+    pyo_VISIT
+    Py_VISIT(self->input);
+    Py_VISIT(self->input_stream);
+    Py_VISIT(self->percent);
+    Py_VISIT(self->percent_stream);
+    return 0;
+}
+
+static int 
+Percent_clear(Percent *self)
+{
+    pyo_CLEAR
+    Py_CLEAR(self->input);
+    Py_CLEAR(self->input_stream);
+    Py_CLEAR(self->percent);
+    Py_CLEAR(self->percent_stream);
+    return 0;
+}
+
+static void
+Percent_dealloc(Percent* self)
+{
+    free(self->data);
+    Percent_clear(self);
+    self->ob_type->tp_free((PyObject*)self);
+}
+
+static PyObject * Percent_deleteStream(Percent *self) { DELETE_STREAM };
+
+static PyObject *
+Percent_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
+{
+    int i;
+    Percent *self;
+    self = (Percent *)type->tp_alloc(type, 0);
+    
+    self->percent = PyFloat_FromDouble(50.);
+    self->modebuffer[0] = 0;
+    
+    INIT_OBJECT_COMMON
+    Stream_setFunctionPtr(self->stream, Percent_compute_next_data_frame);
+    self->mode_func_ptr = Percent_setProcMode;
+    return (PyObject *)self;
+}
+
+static int
+Percent_init(Percent *self, PyObject *args, PyObject *kwds)
+{
+    PyObject *inputtmp, *input_streamtmp, *percenttmp;
+    
+    static char *kwlist[] = {"input", "percent", NULL};
+    
+    if (! PyArg_ParseTupleAndKeywords(args, kwds, "O|O", kwlist, &inputtmp, &percenttmp))
+        return -1; 
+    
+    INIT_INPUT_STREAM
+    
+    if (percenttmp) {
+        PyObject_CallMethod((PyObject *)self, "setPercent", "O", percenttmp);
+    }
+    
+    Py_INCREF(self->stream);
+    PyObject_CallMethod(self->server, "addStream", "O", self->stream);
+    
+    srand((unsigned)(time(0)));
+
+    (*self->mode_func_ptr)(self);
+    
+    Py_INCREF(self);
+    return 0;
+}
+
+static PyObject * Percent_getServer(Percent* self) { GET_SERVER };
+static PyObject * Percent_getStream(Percent* self) { GET_STREAM };
+
+static PyObject * Percent_play(Percent *self, PyObject *args, PyObject *kwds) { PLAY };
+static PyObject * Percent_stop(Percent *self) { STOP };
+
+static PyObject *
+Percent_setPercent(Percent *self, PyObject *arg)
+{
+	PyObject *tmp, *streamtmp;
+	
+	if (arg == NULL) {
+		Py_INCREF(Py_None);
+		return Py_None;
+	}
+    
+	int isNumber = PyNumber_Check(arg);
+	
+	tmp = arg;
+	Py_INCREF(tmp);
+	Py_DECREF(self->percent);
+	if (isNumber == 1) {
+		self->percent = PyNumber_Float(tmp);
+        self->modebuffer[0] = 0;
+	}
+	else {
+		self->percent = tmp;
+        streamtmp = PyObject_CallMethod((PyObject *)self->percent, "_getStream", NULL);
+        Py_INCREF(streamtmp);
+        Py_XDECREF(self->percent_stream);
+        self->percent_stream = (Stream *)streamtmp;
+		self->modebuffer[0] = 1;
+	}
+    
+    (*self->mode_func_ptr)(self);
+    
+	Py_INCREF(Py_None);
+	return Py_None;
+}	
+
+static PyMemberDef Percent_members[] = {
+    {"server", T_OBJECT_EX, offsetof(Percent, server), 0, "Pyo server."},
+    {"stream", T_OBJECT_EX, offsetof(Percent, stream), 0, "Stream object."},
+    {"input", T_OBJECT_EX, offsetof(Percent, input), 0, "Input sound object."},
+    {"percent", T_OBJECT_EX, offsetof(Percent, percent), 0, "percent attribute."},
+    {NULL}  /* Sentinel */
+};
+
+static PyMethodDef Percent_methods[] = {
+    {"getServer", (PyCFunction)Percent_getServer, METH_NOARGS, "Returns server object."},
+    {"_getStream", (PyCFunction)Percent_getStream, METH_NOARGS, "Returns stream object."},
+    {"deleteStream", (PyCFunction)Percent_deleteStream, METH_NOARGS, "Remove stream from server and delete the object."},
+    {"play", (PyCFunction)Percent_play, METH_VARARGS|METH_KEYWORDS, "Starts computing without sending sound to soundcard."},
+    {"stop", (PyCFunction)Percent_stop, METH_NOARGS, "Stops computing."},
+    {"setPercent", (PyCFunction)Percent_setPercent, METH_O, "Sets percentange value."},
+    {NULL}  /* Sentinel */
+};
+
+PyTypeObject PercentType = {
+    PyObject_HEAD_INIT(NULL)
+    0,                                              /*ob_size*/
+    "_pyo.Percent_base",                                   /*tp_name*/
+    sizeof(Percent),                                 /*tp_basicsize*/
+    0,                                              /*tp_itemsize*/
+    (destructor)Percent_dealloc,                     /*tp_dealloc*/
+    0,                                              /*tp_print*/
+    0,                                              /*tp_getattr*/
+    0,                                              /*tp_setattr*/
+    0,                                              /*tp_compare*/
+    0,                                              /*tp_repr*/
+    0,                              /*tp_as_number*/
+    0,                                              /*tp_as_sequence*/
+    0,                                              /*tp_as_mapping*/
+    0,                                              /*tp_hash */
+    0,                                              /*tp_call*/
+    0,                                              /*tp_str*/
+    0,                                              /*tp_getattro*/
+    0,                                              /*tp_setattro*/
+    0,                                              /*tp_as_buffer*/
+    Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE | Py_TPFLAGS_HAVE_GC | Py_TPFLAGS_CHECKTYPES, /*tp_flags*/
+    "Percent objects. Looks for input triggers and sets how much percentage of it to let pass.",           /* tp_doc */
+    (traverseproc)Percent_traverse,                  /* tp_traverse */
+    (inquiry)Percent_clear,                          /* tp_clear */
+    0,                                              /* tp_richcompare */
+    0,                                              /* tp_weaklistoffset */
+    0,                                              /* tp_iter */
+    0,                                              /* tp_iternext */
+    Percent_methods,                                 /* tp_methods */
+    Percent_members,                                 /* tp_members */
+    0,                                              /* tp_getset */
+    0,                                              /* tp_base */
+    0,                                              /* tp_dict */
+    0,                                              /* tp_descr_get */
+    0,                                              /* tp_descr_set */
+    0,                                              /* tp_dictoffset */
+    (initproc)Percent_init,                          /* tp_init */
+    0,                                              /* tp_alloc */
+    Percent_new,                                     /* tp_new */
+};
